welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Int does not take parameters
if (vuBiscuit() == true ) {
             ^