welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit: Int=0
def haveBaggle():Boolean = {
if (vuBiscuit() == true ) {
	return true;
}else { 
	return false;
}
}
droite () 
if (haveBaggle() == false ) {
	avance()
	
}else { 
	gauche()
}

